added script open and close settings

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Focus With Me</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -22,7 +23,7 @@
         </div>
     </header>
     <main>
-        <div class="time">
+        <div  class="time">
             <div class="button-container">
                  <button id="focus-btn" class="button phase"><h2>focus</h2></button>
                  <button id="short-break-btn" class="button phase"><h2>short break</h2></button> 
