fixed changing choice column and centered timers

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                         <input class="input-times" type="number" value="25">
                     </div>
                     <div class="option-columns">
-                        <label class="options" for="">Short Break</label>
+                        <label class="options" for="">Short</label>
                         <input class="input-times" type="number" value="5">
                     </div>
                     <div class="option-columns">
-                        <label class="options" for="">Long Break</label>
+                        <label class="options" for="">Long</label>
                         <input class="input-times" type="number" value="10">
                     </div>
                 </div>
