added responsiveness for time

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3>by xxxx</h3>
         </div>
         <div class="setting-contianer">
-            <div class="setting-icon"></div>
+            <div class="setting-icon icon"></div>
             <h3>settings</h3>
         </div>
     </header>
