broken toggles changing to different method

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 <div id="alerts-options" class="option-container">
                     <div class="row">
                         <label for="">Alerts</label>
-                        <div class="on-off-toggle">
+                        <div data-toggled="false" class="on-off-toggle">
                             <div class="circle"></div>
-                            <p id="on-off">off</p>
+                            <p class="off">Off</p>
                         </div>
                     </div>
                     <div class="row">
@@ -108,7 +108,7 @@
             <div id="mixer-main" class="ui-main">
                 <div class="mixer-options">
                     <label for="">Keyboard</label>
-                    <div class="on-off-toggle">
+                    <div data-toggled="false" class="on-off-toggle">
                         <div class="circle"></div>
                         <p>off</p>
                     </div>
@@ -119,7 +119,7 @@
                  
                     <div class="mixer-options">
                         <label for="">Bird Chirping</label>
-                        <div class="on-off-toggle">
+                        <div data-toggled="false" class="on-off-toggle">
                             <div class="circle"></div>
                             <p>off</p>
                         </div>
