--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <label for="">Keyboard</label>
                     <div data-toggled="false" class="on-off-toggle">
                         <div class="circle"></div>
-                        <p>off</p>
+                        <p class="off">Off</p>
                     </div>
                 </div>   
                 
@@ -121,7 +121,7 @@
                         <label for="">Bird Chirping</label>
                         <div data-toggled="false" class="on-off-toggle">
                             <div class="circle"></div>
-                            <p>off</p>
+                            <p class="off">Off</p>
                         </div>
                     </div>
                   
