added music icon transition for music controls

--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
         </div>
     </main>
     <footer>
-        <div class="music-container">
+        <div data-toggle="false" class="music-container">
             <div class="music-icon-container">
                  <div id="bar-one" class="bar"></div>
                  <div id="bar-two" class="bar"></div>
                  <div id="bar-three" class="bar"></div>
                  <div id="bar-four" class="bar"></div>
-            </div>
-            <div class="play icon"></div>
-            <div class="sound-icon icon"></div>
-            <div class="slide-container">
+            </div> 
+            <div class="popout">
+                <div class="play icon"></div>
+                <div class="sound-icon icon"></div>
                 <input type="range" min="0" max="100" value="50" id="music-volume-slider" class="volume">
             </div>
         </div>
