fixed sliders for mobile and added interactivity to volume

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                  <div id="bar-four" class="bar"></div>
             </div> 
             <div class="popout">
-                <div class="play icon"></div>
-                <div class="sound-icon icon"></div>
+                <div data-toggle="false" id="play" class="play icon"></div>
+                <div id="speaker" class="sound-icon icon"></div>
                 <input type="range" min="0" max="100" value="50" id="music-volume-slider" class="volume">
             </div>
         </div>
