added dancing bars

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
     <footer>
         <div data-toggle="false" class="music-container">
             <div class="music-icon-container">
-                 <div id="bar-one" class="bar"></div>
-                 <div id="bar-two" class="bar"></div>
-                 <div id="bar-three" class="bar"></div>
-                 <div id="bar-four" class="bar"></div>
-            </div> 
+                <div  class="bar"></div>
+                <div  class="bar"></div>
+                <div  class="bar"></div>
+                <div  class="bar"></div>
+           </div> 
             <div class="popout">
                 <div data-toggle="false" id="play" class="play icon"></div>
                 <div id="speaker" class="sound-icon icon"></div>
