fixed dancing bars

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         <div data-toggle="false" class="music-container">
             <div class="music-icon-container">
                 <div  class="bar"></div>
+                <div id="short1" class="bar short"></div>
                 <div  class="bar"></div>
-                <div  class="bar"></div>
-                <div  class="bar"></div>
+                <div id = "short2" class="bar short"></div>
            </div> 
             <div class="popout">
                 <div data-toggle="false" id="play" class="play icon"></div>
